<resources>
    <string name="app_name">CodeCompanionApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_compiler">Compiler</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="connection">Connection</string>
    <string name="menu_information">Information</string>
    <string name="menu_profile">Profile</string>
    <string name="placeholder_stat">-</string>

    <string-array name="fun_messages_connect">
        <item>ready to code\?</item>
        <item>hi, mate\!</item>
        <item>let\'s rock\!</item>
        <item>warming up ...</item>
        <item>let\'s do this\!</item>
        <item>i\'m ready\!</item>
    </string-array>

    <string-array name="fun_messages_tasks_empty">
        <item>nothing to do here.</item>
        <item>all tasks solved\!</item>
        <item>you can take a day off.</item>
        <item>you made it\!</item>
        <item>wow\! you are good\!</item>
    </string-array>

    <string-array name="fun_messages_tasks">
        <item>check your todo-list\!</item>
        <item>plenty work to do\!</item>
        <item>you got this\!</item>
        <item>which to go first\?</item>
        <item>pick a task and let\'s go\!</item>
    </string-array>

    <string-array name="fun_messages_compiler_empty">
        <item>your code seems to work.</item>
        <item>no errors found\!</item>
        <item>congrats, no errors\!</item>
        <item>works like a charm &lt;3</item>
    </string-array>

    <string-array name="fun_messages_compiler">
        <item>i think you have some errors ...</item>
        <item>some bugs incoming\!</item>
        <item>something is broken ...</item>
        <item>no this doesn\'t work. try again\!</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_tutorial_text">Here\'s a short tutorial on how to use our app. Just hit \'Start\' and let\'s go.</string>
    <string name="second_tutorial_text"><![CDATA[In IntelliJ you have to download and install the Code Companion Plugin under Settings > Plugins > Search for \'Code Companion\'.\nAfter installing IntelliJ has to be restarted.]]></string>
    <string name="third_tutorial_text">Now you can open the \'Code Companion\' tool window on the right side of your IntelliJ window. Scan the QR-Code shown in IntelliJ with your app. Once connected, the icon on the home page of your app shows a green checkmark.</string>
    <string name="fourth_tutorial_message">Errors, Warnings and your To-Do List are now transferred live to your app. Tap on them to get more information about the meaning of the message.</string>
    <string name="phone"><u>Phone</u></string>
    <string name="desktop"><u>Desktop</u></string>

</resources>