<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="404dp"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/color_gradient"
            android:orientation="vertical">

            <View
                android:id="@+id/view"
                android:layout_width="212dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/user_icon_img" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/button_small"
                android:text="View"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_margin="16dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/button_middle"
            android:backgroundTint="@color/green"
            android:text="Connect"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/compiler_button"
                android:layout_width="@dimen/small_button_size"
                android:layout_height="@dimen/small_button_size"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_middle"
                android:text="@string/menu_compiler"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tasks_button"
                android:layout_width="@dimen/small_button_size"
                android:layout_height="@dimen/small_button_size"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_middle"
                android:text="@string/menu_tasks"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/settings_button"
                android:layout_width="@dimen/small_button_size"
                android:layout_height="@dimen/small_button_size"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_middle"
                android:text="@string/menu_settings"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>